src/finanalytics_ai/interfaces/api/static/ProfitDLL/Exemplo C++/profit.h

typedef struct
{
    byte Version;
    int BrokerID;
    wchar_t* AccountID;
    wchar_t* SubAccountID;
    int64_t Reserved;
} TConnectorAccountIdentifier;
typedef struct
{
    byte Version;
    wchar_t* Ticker;          
    wchar_t* Exchange;        
    byte FeedType; 
} TConnectorAssetIdentifier;
////////////////////////////////////////////////////////////////////////////////
// WARNING: Não utilizar funções da dll dentro do CALLBACK
////////////////////////////////////////////////////////////////////////////////
//Callback do stado das diferentes conexões
typedef void(__stdcall* TStateCallback)(int nConnStateType, int nResult);
////////////////////////////////////////////////////////////////////////////////
//Callback  do estado do hystorico de ordens
typedef void(__stdcall* THistoryCallBack)(TAssetID AssetID,
    int nCorretora, int nQtd, int nTradedQtd, int nLeavesQtd, int Side,
    double sPrice, double sStopPrice, double sAvgPrice,
    __int64 nProfitID,
    wchar_t* TipoOrdem, wchar_t* Conta, wchar_t* Titular, wchar_t* ClOrdID, wchar_t* Status, wchar_t* Date);
typedef void(__stdcall* TProgressCallBack)(TAssetID assetId,
    int nProgress);
////////////////////////////////////////////////////////////////////////////////
//Callback de alterção em ordens
typedef void(__stdcall* TOrderChangeCallBack)(TAssetID AssetID,
    int nCorretora, int nQtd, int nTradedQtd, int nLeavesQtd, int Side,
    double sPrice, double sStopPrice, double sAvgPrice,
    __int64 nProfitID,
    wchar_t* TipoOrdem, wchar_t* Conta, wchar_t* Titular, wchar_t* ClOrdID, wchar_t* Status, wchar_t* Date, wchar_t* TextMessage);
////////////////////////////////////////////////////////////////////////////////
//Callback com a lista de contas
typedef void(__stdcall* TAccountCallback)(int nCorretora,
    wchar_t* CorretoraNomeCompleto, wchar_t* AccountID, wchar_t* NomeTitular);
////////////////////////////////////////////////////////////////////////////////
//Callback com informações marketData
typedef void(__stdcall* TNewTradeCallback)(TAssetID assetId,
    wchar_t* date,
    unsigned int nTradeNumber,
    double price, double vol,
    int qtd, int buyAgent, int sellAgent, int tradeType,
    wchar_t bIsEdit);
typedef void(__stdcall* THistoryTradeCallback)(TAssetID assetId,
    wchar_t* date,
    unsigned int nTradeNumber,
    double price, double vol,
    int qtd, int buyAgent, int sellAgent, int tradeType);
typedef void(__stdcall* TNewDailyCallback)(TAssetID TAssetIDRec,
    wchar_t* date,
    double sOpen, double sHigh, double sLow, double sClose, double sVol, double sAjuste, double sMaxLimit, double sMinLimit,
    double sVolBuyer, double sVolSeller, int nQtd, int nNegocios, int nContratosOpen, int nQtdBuyer, int nQtdSeller, int nNegBuyer, int nNegSeller);
////////////////////////////////////////////////////////////////////////////////
//Callback com informações marketData

typedef void(__stdcall* TPriceBookCallback)(TAssetID assetId,
    int nAction, int nPosition, int Side, int nQtd, int nCount,
    double sPrice,
    void* pArraySell, void* pArrayBuy);
typedef void(__stdcall* TOfferBookCallback)(TAssetID assetId,
    int nAction, int nPosition, int Side, int nQtd, int nAgent, __int64 nOfferID,
    double sPrice,
    int bHasPrice, int bHasQtd, int bHasDate, int bHasOfferID, int bHasAgent,
    wchar_t* date,
    void* pArraySell, void* pArrayBuy);
typedef void(__stdcall* TNewTinyBookCallBack)(TAssetID assetId,
    double price,
    int qtd, int side);
typedef void(__stdcall* TAssetListInfoCallback)(TAssetID assetId, wchar_t* strName, wchar_t* strDescription, int nMinOrderQtd, int nMaxOrderQtd, int nLote, int stSecurityType, int ssSecuritySubType, double sMinPriceIncrement, double sContractMultiplier, wchar_t* strDate, wchar_t* strISIN);
typedef void(__stdcall* TAssetListInfoCallbackV2)(TAssetID assetId, wchar_t* strName, wchar_t* strDescription, int nMinOrderQtd, int nMaxOrderQtd, int nLote, int stSecurityType, int ssSecuritySubType, double sMinPriceIncrement, double sContractMultiplier, wchar_t* strDate, wchar_t* strISIN, wchar_t* strSetor, wchar_t* strSubSetor, wchar_t* strSegmento);
typedef void(__stdcall* TAssetListCallback)(TAssetID assetId, wchar_t* strName);
typedef void(__stdcall* TInvalidTickerCallback)(TAssetID assetId);
typedef void(__stdcall* TAdjustHistoryCallbackV2)(TAssetID assetId, double sValue, wchar_t* strAdjustType, wchar_t* strObserv, wchar_t* dtAjuste, wchar_t* dtDeliber, wchar_t* dtPagamento, int nFlags, double dMult);
typedef void(__stdcall* TConnectorBrokerSubAccountListChangedCallback)(TConnectorAccountIdentifier AccountID);
typedef int(__stdcall* SetAssetListCallback)(TAssetListCallback AssetListCallback);
typedef int(__stdcall* SetAssetListInfoCallback)(TAssetListInfoCallback AssetListInfoCallback);
typedef int(__stdcall* SetAssetListInfoCallbackV2)(TAssetListInfoCallbackV2 AssetListInfoCallbackV2);
typedef int(__stdcall* SetInvalidTickerCallback)(TInvalidTickerCallback InvalidTickerCallback);
typedef int(__stdcall* SetAdjustHistoryCallbackV2)(TAdjustHistoryCallbackV2 AdjustHistoryCallbackV2);
typedef int(__stdcall* SetBrokerSubAccountListChangedCallback)(TConnectorBrokerSubAccountListChangedCallback ChangeState);
typedef int(__stdcall* DLLInitializeMarketLogin)(
    const wchar_t* activationKey,
    const wchar_t* user,
    const wchar_t* password,
    TStateCallback stateCallback,
    TNewTradeCallback newTradeCallback,
    TNewDailyCallback newDailyCallback,
    TPriceBookCallback priceBookCallback,
    TOfferBookCallback offerBookCallback,
    THistoryTradeCallback newHistoryCallback,
    TProgressCallBack progressCallBack,
    TNewTinyBookCallBack newTinyBookCallBack);
typedef int(__stdcall* DLLInitializeLogin) (
    const wchar_t* activationKey,
    const wchar_t* user,
    const wchar_t* password,
    TStateCallback stateCallback,
    THistoryCallBack historyCallBack,
    TOrderChangeCallBack orderChangeCallBack,
    TAccountCallback accountCallback,
    TNewTradeCallback newTradeCallback,
    TNewDailyCallback newDailyCallback,
    TPriceBookCallback priceBookCallback,
    TOfferBookCallback offerBookCallback,
    THistoryTradeCallback newHistoryCallback,
    TProgressCallBack progressCallBack,
    TNewTinyBookCallBack newTinyBookCallBack);
typedef int(__stdcall* SubscribeTicker)(const wchar_t* ticker, const wchar_t* bolsa);
typedef int(__stdcall* UnsubscribeTicker)(const wchar_t* ticker, const wchar_t* bolsa);
typedef int(__stdcall* SubscribeOfferBook)(const wchar_t* ticker, const wchar_t* bolsa);
typedef wchar_t* (__stdcall* GetAgentNameByID)(int nID);
typedef wchar_t* (__stdcall* GetAgentShortNameByID)(int nID);
////////////////////////////////////////////////////////////////////////////////
// Roteamento
typedef __int64(__stdcall* SendBuyOrder)(const wchar_t* pwcIDAccount, const wchar_t* pwcIDCorretora, wchar_t* sSenha, wchar_t* pwcTicker, wchar_t* pwcBolsa, double sPrice, int nAmount);
typedef __int64(__stdcall* SendSellOrder)(const wchar_t* pwcIDAccount, const wchar_t* pwcIDCorretora, wchar_t* sSenha, wchar_t* pwcTicker, wchar_t* pwcBolsa, double sPrice, int nAmount);
typedef __int64(__stdcall* SendStopBuyOrder)(const wchar_t* pwcIDAccount, const wchar_t* pwcIDCorretora, wchar_t* sSenha, wchar_t* pwcTicker, wchar_t* pwcBolsa, double sPrice, double sStopPrice, int nAmount);
typedef __int64(__stdcall* SendStopSellOrder)(const wchar_t* pwcIDAccount, const wchar_t* pwcIDCorretora, wchar_t* sSenha, wchar_t* pwcTicker, wchar_t* pwcBolsa, double sPrice, double sStopPrice, int nAmount);
typedef __int64(__stdcall* SendZeroPosition)(const wchar_t* pwcIDAccount, const wchar_t* pwcIDCorretora, wchar_t* pwcTicker, wchar_t* pwcBolsa, wchar_t* pwcSenha, double sPrice);
typedef int(__stdcall* GetOrders)(const wchar_t* pwcIDAccount, const wchar_t* pwcIDCorretora, wchar_t* dateStart, wchar_t* dateEnd);
typedef void* (__stdcall* GetPosition)(const wchar_t* pwcIDAccount, const wchar_t* pwcIDCorretora, wchar_t* pwcTicker, wchar_t* pwcBolsa);
typedef int(__stdcall* GetLastDailyClose)(wchar_t* ticker, wchar_t* bolsa, double* dClose, int bAdjusted);
typedef __int64(__stdcall* SendMarketBuyOrder)(const wchar_t* pwcIDAccount, const wchar_t* pwcIDCorretora, wchar_t* sSenha, wchar_t* pwcTicker, wchar_t* pwcBolsa, int nAmount);
typedef __int64(__stdcall* SendMarketSellOrder)(const wchar_t* pwcIDAccount, const wchar_t* pwcIDCorretora, wchar_t* sSenha, wchar_t* pwcTicker, wchar_t* pwcBolsa, int nAmount);
 

typedef int(__stdcall* GetAgentNameLength)(int nAgentID, int nShortFlag);
typedef int(__stdcall* GetAgentName)(int nAgentLength, int nAgentID, wchar_t* pwcAgent, unsigned int nShortFlag);
typedef bool (__stdcall* TConnectorEnumerateAssetProc)(TConnectorAssetIdentifier a_Asset, int a_Param);
typedef int(__stdcall* EnumerateAllPositionAssets)(TConnectorAccountIdentifier a_AccountID, byte a_OrderVersion, int a_Param, TConnectorEnumerateAssetProc a_Callback);